# dpnp

./: .buildinfo  .clang-format  .coveragerc  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  0.build.sh  0.env.sh  1.build.bat  1.env.bat  AGENTS.md  Bit-twiddling-functions  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Comparison-functions  LICENSE.txt  MANIFEST.in  README.md  THANKS.txt  Trigonometric-functions  a.out  alaki.cpp  azure-pipelines.yml  codecov.yml  contents.html  dpctl.html  dpnp.dpnp  dpnp.dpnp_iface  dpnp_api.html  dpnp_backend_api.html  floating-functions  genindex.html  index.html  install.html  num.py  objects.inv  (+20 more)
dpctl_ext/: CMakeLists.txt  __init__.py
dpctl_ext/tensor/: CMakeLists.txt  __init__.pxd  __init__.py  _accumulation.py  _array_api.py  _clip.py  _copy_utils.py  _ctors.py  _data_types.py  _device.py  _dlpack.pxd  _dlpack.pyx  _elementwise_common.py  _elementwise_funcs.py  _indexing_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _numpy_helper.py  _print.py  _reduction.py  _reshape.py  _scalar_utils.py  _search_functions.py  _searchsorted.py  _set_functions.py  _slicing.pxi  _sorting.py  _statistical_functions.py  _testing.py  _type_utils.py  _types.pxi  _usmarray.pyx  _utility_functions.py
dpctl_ext/tests/: __init__.py
dpnp/: AGENTS.md  CMakeLists.txt  __init__.py  __main__.py  _version.py  backend.pxd  backend.pyx  backend_arraycreation.pyx  backend_bitwise.pyx  backend_counting.pyx  backend_indexing.pyx  backend_linearalgebra.pyx  backend_logic.pyx  backend_manipulation.pyx  backend_mathematical.pyx  backend_searching.pyx  backend_sorting.pyx  backend_statistics.pyx  backend_trigonometric.pyx  config.py  dparray.pxd  dparray.pyx  dpnp_algo.pxd  dpnp_algo.pyx  dpnp_algo_arraycreation.pyx  dpnp_algo_bitwise.pyx  dpnp_algo_counting.pyx  dpnp_algo_mathematical.pyx  dpnp_algo_sorting.pyx  dpnp_algo_statistics.pyx  dpnp_array.py  dpnp_array_api_info.py  dpnp_broadcast.py  dpnp_container.py  dpnp_flatiter.py  dpnp_iface.py  dpnp_iface_arraycreation.py  dpnp_iface_arraymanipulation.py  dpnp_iface_bitwise.py  dpnp_iface_counting.py  (+19 more)
dpnp/backend/: CMakeLists.txt  Doxyfile  backend_fptr.hpp  backend_iface.hpp  backend_iface_fft.hpp  backend_iface_fptr.cpp  backend_iface_fptr.hpp  backend_pstl.hpp  backend_utils.hpp  custom_1arg_1type_tbl.hpp  custom_1arg_2type_mkl_tbl.hpp  custom_1arg_2type_tbl.hpp  custom_2arg_1type_tbl.hpp  custom_2arg_3type_tbl.hpp  custom_kernels.cpp  custom_kernels_bitwise.cpp  custom_kernels_elemwise.cpp  custom_kernels_linalg.cpp  custom_kernels_manipulation.cpp  custom_kernels_mathematical.cpp  custom_kernels_random.cpp  custom_kernels_reduction.cpp  custom_kernels_searching.cpp  custom_kernels_sorting.cpp  custom_kernels_statistics.cpp  dpnp_kernels_fft.cpp  dpnp_kernels_random.cpp  memory_sycl.cpp  mkl_wrap_blas1.cpp  mkl_wrap_blas3.cpp  mkl_wrap_lapack.cpp  mkl_wrap_rng.cpp  queue_sycl.cpp  queue_sycl.hpp  rng_engine.cpp  rng_engine.hpp  rng_engine_init.cpp
dpnp/cmake/: copy_existing.cmake
dpnp/dpnp_algo/: CMakeLists.txt  __init__.pxd  __init__.py  dpnp_algo.pxd  dpnp_algo.pyx  dpnp_algo_arraycreation.pxi  dpnp_algo_arraycreation.pyx  dpnp_algo_bitwise.pxi  dpnp_algo_bitwise.pyx  dpnp_algo_counting.pxi  dpnp_algo_counting.pyx  dpnp_algo_indexing.pxi  dpnp_algo_indexing.pyx  dpnp_algo_linearalgebra.pxi  dpnp_algo_linearalgebra.pyx  dpnp_algo_logic.pxi  dpnp_algo_logic.pyx  dpnp_algo_manipulation.pxi  dpnp_algo_manipulation.pyx  dpnp_algo_mathematical.pxi  dpnp_algo_mathematical.pyx  dpnp_algo_searching.pxi  dpnp_algo_searching.pyx  dpnp_algo_sorting.pxi  dpnp_algo_sorting.pyx  dpnp_algo_special.pxi  dpnp_algo_special.pyx  dpnp_algo_statistics.pxi  dpnp_algo_statistics.pyx  dpnp_algo_trigonometric.pxi  dpnp_algo_trigonometric.pyx  dpnp_arraycreation.py  dpnp_elementwise_common.py  dpnp_elementwise_docs.py  dpnp_fill.py
dpnp/dpnp_utils/: CMakeLists.txt  __init__.pxd  __init__.py  dpnp_algo_utils.pxd  dpnp_algo_utils.pyx  dpnp_utils_common.py  dpnp_utils_einsum.py  dpnp_utils_linearalgebra.py  dpnp_utils_pad.py  dpnp_utils_reduction.py  dpnp_utils_statistics.py
dpnp/exceptions/: __init__.py
dpnp/fft/: CMakeLists.txt  __init__.py  dpnp_algo_fft.pyx  dpnp_iface_fft.py  dpnp_utils_fft.py
dpnp/include/: dpnp4pybind11.hpp  dpnp_tensor_capi.h  usm_ndarray_constants.h
dpnp/lib/: __init__.py  stride_tricks.py
dpnp/linalg/: CMakeLists.txt  __init__.py  dpnp_algo_linalg.pyx  dpnp_iface_linalg.py  dpnp_utils_linalg.py  linalg.pyx  linalg_iface.py
dpnp/memory/: __init__.py  _memory.py
dpnp/mkl/: __init__.py  inumpy_mkl.pxd  inumpy_mkl.pyx
dpnp/polynomial/: __init__.py
dpnp/random/: CMakeLists.txt  __init__.py  _random.pyx  dpnp_algo_random.pyx  dpnp_iface_random.py  dpnp_random_state.py  random_iface.py
dpnp/scipy/: __init__.py
dpnp/special/: __init__.py  _erf.py
dpnp/tensor/: CMakeLists.txt  __init__.pxd  __init__.py  _accumulation.py  _array_api.py  _clip.py  _compute_follows_data.pyx  _constants.py  _copy_utils.py  _ctors.py  _data_types.py  _device.py  _dldevice_conversions.py  _dlpack.pyx  _elementwise_common.py  _elementwise_funcs.py  _flags.pyx  _indexing_functions.py  _linear_algebra_functions.py  _manipulation_functions.py  _numpy_helper.py  _print.py  _reduction.py  _reshape.py  _scalar_utils.py  _search_functions.py  _searchsorted.py  _set_functions.py  _slicing.pxd  _slicing.pxi  _slicing.pyx  _sorting.py  _statistical_functions.py  _stride_utils.pxd  _stride_utils.pxi  _stride_utils.pyx  _testing.py  _type_utils.py  _types.pxd  _types.pyx  (+3 more)
dpnp/tests/: __init__.py  config.py  conftest.py  helper.py  infra_warning_utils.py  qr_helper.py  skipped_tests.tbl  skipped_tests_cuda.tbl  skipped_tests_gpu.tbl  skipped_tests_gpu_no_fp64.tbl  test_absolute.py  test_amin_amax.py  test_arithmetic.py  test_array_api_info.py  test_array_utils.py  test_arraycreation.py  test_arraymanipulation.py  test_arraypad.py  test_binary_two_outputs_ufuncs.py  test_binary_ufuncs.py  test_bitwise.py  test_cli_options.py  test_copy.py  test_dlpack.py  (+35 more)
(+108253 files in other folders)
