[build-system]
build-backend = "setuptools.build_meta"
requires = [
  # TODO: keep in sync with [project.dependencies]
  "build>=1.2.2",
  "cmake>=3.31.6",
  "cython>=3.0.12",
  # WARNING: use only dpctl version available on PyPi
  "dpctl>=0.20.0",
  "ninja>=1.11.1; platform_system!='Windows'",
  # NOTE: no DPNP restriction on NumPy version, so follow NumPy's drop schedule
  "numpy>=1.26.0",
  "scikit-build>=0.18.1",
  "setuptools>=79.0.1",
  "wheel>=0.45.1",
  # WARNING: check with doc how to upgrade
  "versioneer[toml]==0.29"
]

[project]
authors = [{name = "Intel Corporation"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: C++",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX",
  "Operating System :: Unix"
]
dependencies = [
  # TODO: keep in sync with [build-system.requires] and conda-recipe/meta.yaml
  # This restrictions are for dependabot, actual restrictions are set with
  # conda.
  # TODO: populate it during build process
  # TODO: do we have to set sycl runtime dependencies here
  # "dpcpp-cpp-rt>=0.59.0",
  # "intel-cmplr-lib-rt>=0.59.0"
  # WARNING: use the latest dpctl dev version, otherwise stable w/f will fail
  "dpctl>=0.21.0dev0",
  "numpy>=1.26.0"
]
description = "Data Parallel Extension for NumPy"
dynamic = ["version"]
keywords = [
  "dpnp",
  "sycl",
  "numpy",
  "python3",
  "intel",
  "mkl",
  "oneapi",
  "gpu",
  "dpcpp"
]
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
maintainers = [{name = "Intel Corporation"}]
name = "dpnp"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10,<3.15"

[project.optional-dependencies]
coverage = [
  "coverage",
  "Cython",
  "llvm",
  "pytest",
  "pytest-cov",
  "scipy",
  "tomli"
]
docs = [
  "Cython",
  "cupy",
  "sphinx",
  "sphinx_rtd_theme",
  "pyenchant",
  "sphinxcontrib-googleanalytics",
  "sphinxcontrib-spelling"
]
test = ["pytest", "scipy"]

[project.urls]
Changelog = "https://github.com/IntelPython/dpnp/blob/master/CHANGELOG.md"
Documentation = "https://intelpython.github.io/dpnp"
Homepage = "https://github.com/IntelPython/dpnp"
Issues = "https://github.com/IntelPython/dpnp/issues"
Repository = "https://github.com/IntelPython/dpnp.git"

[tool.black]
line-length = 80
target-version = ['py310', 'py311', 'py312', 'py313', 'py314']

[tool.codespell]
builtin = "clear,rare,informal,names"
check-filenames = true
ignore-words-list = "amin,arange,elemt,fro,hist,ith,mone,nd,nin,sinc,vart"
quiet-level = 3

[tool.coverage.report]
omit = [
  "dpnp/tests/*",
  "dpnp/_version.py"
]

[tool.coverage.run]
branch = true
omit = [
  "dpnp/tests/*",
  "dpnp/_version.py"
]
plugins = [
  "Cython.Coverage"
]
source = [
  "dpnp"
]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
skip = ["dpnp/__init__.py"]
split_on_trailing_comma = true
use_parentheses = true

[tool.pylint.basic]
include-naming-hint = true

[tool.pylint.classes]
exclude-protected = ["_create_from_usm_ndarray"]

[tool.pylint.design]
max-args = 11
max-branches = 18
max-locals = 30
max-positional-arguments = 9
max-returns = 8

[tool.pylint.format]
max-line-length = 80
max-module-lines = 8000

[tool.pylint.imports]
allow-wildcard-with-all = true

[tool.pylint.miscellaneous]
notes = ["FIXME", "XXX"]

[tool.versioneer]
VCS = "git"
parentdir_prefix = "dpnp-"
style = "pep440"
versionfile_build = "dpnp/_version.py"
versionfile_source = "dpnp/_version.py"
